<resources>
    <string name="app_name">MOod9</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="universal_feed">Universal Feed</string>
    <string name="emotion">Emotion</string>
    <string name="social">Social</string>
    <string name="stats">Stats</string>
    <string name="add_location">Add Location</string>
    <string name="save">Save</string>
    <string name="app_name_sub">Mood Organizer overdose #9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="personal_feed">Personal Feed</string>
    <string name="followed_feed">Followed Feed</string>
    <string name="near_me">Near Me</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="title_activity_maps">Map</string>
    <string name="about_text">
        This is a social media application where we encourage the sharing of your MOods.
        It was created for a group project for CMPUT 301 at the University of Alberta.
    </string>
    <string name="about_third_party">3rd Party Licensing Notices</string>
    <string name="about_license">License Text</string>
    <string name="about_jest_droid_notice">
        Jest Droid: Copyright 2013 www.searchly.com Licensed under the Apache License, Version 2.0
    </string>
    <string name="about_mpandroid_chart_notice">
        MPAndroid Chart: Copyright 2016 Philipp Jahoda: Licensed under the Apache License, Version 2.0
    </string>
    <string name="about_apache2_button">Apache License</string>
    <string name="max_emotion">You are mostly feeling:</string>
    <string name="stats_default_message">
        You have not selected any moods in the feed.
        Navigate to the Personal feed and come back
        to see the awesome charts.
    </string>
    <string name="stored_name">username</string>
    <string name="stored_id">user_id</string>
    <string name="Decline">Decline</string>
    <string name="Accept">Accept</string>
    <string name="Cancel">Cancel</string>

</resources>
