<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/personal"
            android:icon="@drawable/ic_personal"
            android:title="@string/personal_feed" />
        <item
            android:id="@+id/followed"
            android:icon="@drawable/ic_followed"
            android:title="@string/followed_feed" />
        <item
            android:id="@+id/universal"
            android:icon="@drawable/ic_globe"
            android:title="@string/universal_feed" />
        <item
            android:id="@+id/near_me"
            android:icon="@drawable/ic_location"
            android:title="@string/near_me" />
    </group>

    <item android:title="Communication">
        <menu>
            <item
                android:id="@+id/profile"
                android:icon="@drawable/ic_face"
                android:title="@string/profile" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_lightbulb"
                android:title="@string/about" />
            <item
                android:id="@+id/stats"
                android:icon="@drawable/ic_stats"
                android:title="@string/stats" />
        </menu>
    </item>
<!--TODO change the buttons and icons to do as we wish-->
</menu>


