<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.ualberta.cmput301w17t09.mood9.mood9.AboutActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_text"/>
        <TextView
            android:id="@+id/ThirdPartyHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/about_third_party" />
        <TextView
            android:id="@+id/jest_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_jest_droid_notice"
            android:layout_marginBottom="5dp"/>
        <TextView
            android:id="@+id/mpandroid_chart_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_mpandroid_chart_notice"
            android:layout_marginBottom="5dp"/>
        <Button
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:id="@+id/view_apache2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/about_apache2_button"/>
        <Button
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:id="@+id/gotit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Got it!"/>
    </LinearLayout>
    </RelativeLayout>

</ScrollView>
