<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_mood"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.ualberta.cmput301w17t09.mood9.mood9.AddMoodActivity">
    <RelativeLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size"
            android:text="@string/emotion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emotions_spinner"
            android:layout_below="@+id/textView2"
            android:layout_alignParentStart="true" />

        <TextView
            android:textSize="@dimen/text_size"
            android:textColor="@color/colorBlack"
            android:text="@string/social"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_below="@+id/emotions_spinner"
            android:layout_alignParentStart="true"
            android:layout_marginTop="44dp" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/social_spinner"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true" />

        <EditText
            android:hint="Trigger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/trigger_edittext"
            android:layout_marginTop="27dp"
            android:layout_below="@+id/social_spinner"
            android:layout_alignParentStart="true" />

        <Button
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2"
            android:layout_below="@+id/calendar"
            android:layout_alignParentStart="true"
            android:layout_marginTop="24dp"
            android:layout_alignParentEnd="true" />

        <Button
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:drawableRight="@android:drawable/ic_dialog_map"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:text="Current location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_below="@+id/trigger_edittext"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/curDate">
        </Button>

        <Button
            android:id="@+id/calendar"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/button"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            android:text="Set Calendar" />
        <TextView
            android:id="@+id/curDate"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/calendar"
            android:layout_alignBottom="@+id/calendar"
            android:layout_alignParentEnd="true"
            android:text="Date:"
            android:textSize="24sp"
            android:layout_marginEnd="25dp" />

        <ImageButton
            android:background="@color/colorPrimary"
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_camera"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/cameraImage"
            android:layout_alignBottom="@+id/cameraImage" />

        <ImageView
            android:id="@+id/cameraImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/curDate"
            android:layout_alignTop="@+id/trigger_edittext"
            android:layout_marginEnd="34dp"
            app:srcCompat="@android:drawable/ic_menu_report_image" />

        <Button
            android:textColor="@color/colorWhite"
            android:id="@+id/custom_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="Custom Location"
            android:layout_below="@+id/trigger_edittext"
            android:layout_toStartOf="@+id/cameraButton" />
    </RelativeLayout>
</ScrollView>

